<resources>
    <string name="app_name">Музей археологии Хакасии</string>
    <string name="MainTitle">ОТ(К)РОЙ \nХАКАСИЮ</string>
    <string name="Default">Default Text</string>
    <string name="MenuButtonStart"><font size="26">ЭКСКУРСИЯ</font>\n<font size="8">Пройдите по залу каменных изваяний</font></string>
    <string name="MenuButtonCollection"><font size="26">МОЯ КОЛЛЕКЦИЯ</font>\n<font size="8">Соберите все артефакты</font></string>
    <string name="MenuButtonBook"><font size="26">ЭНЦИКЛОПЕДИЯ</font>\n<font size="8">Статьи об истории и культуре</font></string>
    <string name="MenuButtonMap"><font size="26">КАРТА ХАКАСИИ</font>\n<font size="8">Очаги древней культуры</font></string>
    <string name="MenuButtonSettings"><font size="26">НАСТРОЙКИ</font></string>
    <string name="MenuButtonAbout"><font size="26">АВТОРЫ</font></string>
    <string name="OnboardSubtitle1">Отправляйтесь в экспедицию \nи разгадайте, что хранят древние каменные изваяния</string>
    <string name="OnboardSubtitle2">Вы пройдёте по маршруту, исследуете артефакты, услышите мифы древних хакасов и увидете, \nкак они жили</string>
    <string name="OnboardTitle1">Откройте \nдревнюю Хакасию, \nкак настоящие археологи</string>
    <string name="OnboardTitle2">Здесь ваш путеводитель \nпо музею и истории Хакасии</string>
    <string name="Okunev_culture_articletext">В эпоху бронзового века (примерно в XVIII веке до нашей эры) в хакасские степи пришли племена с запада. Европеоиды-мужчины стали брать в жёны монголоидных женщин из местных племён. В результате смешения образовался новый народ.

Этот народ сформировал новую самобытную и уникальную культуру, которую археологи условно назвали окуневской по названию хакасского улуса Окунево. Здесь археолог-сибиревед С. А. Теплоухов исследовал один из первых курганов этого народа. Но долгое время считалось, что эти могилы относятся к более позднему времени или к предшествующей афанасьевской культуре. И только в 1960-е годы Г. А. Максименков выделил их как отдельную культуру. Так одна из ярчайших культур бронзового века была открыта последней.

Главным делом окуневцев была охота на оленей, различных птиц. В тайге они не боялись противостоять медведю и рыси. Такой образ жизни отразился на мировоззрении окуневцев. Из зубов и костей животных они изготавливали магические амулеты и ожерелья. Особо почитали медведя, волка, оленя — их изображения наносили на предметы культового назначения. Окуневцы были искусны не только в охоте, но и в разведении скота. В их пантеоне божеств корова, бык и баран занимали ведущие роли.

Вся жизнь окуневцев была пропитана религиозными культами и магическими ритуалами. Их жрецы и шаманы, помимо духовной власти, обладали и властью светской, их хоронили в монументальных курганах. Религиозное мировоззрение окуневцев ярко отражается в изображениях на изваяниях.

Окуневцы ещё изготавливали орудия из камня. Из него делали наконечники стрел и копий, скрёбла, топоры, и даже украшения. Но бронзовый век — время металла. Эти племена научились изготавливать иголки, лезвия ножей, выковывать кинжалы.

Многие горные крепостные сооружения, которые хакасы называют «све», были сооружены именно окуневцами.
</string>
    <string name="Tagarskaya_culture_articletext">В конце бронзового века (к VII веку до нашей эры) в Хакасии формируется новая культура — тагарская. Сюда пришли племена с берегов Оби, которые уже умели ездить верхом на коне.

Эта культура оставила множество археологических памятников. Наверное, нет в Хакасии места, где не встретились бы курганы. Практически все из них, хорошо видимые в степи, малые и большие, были сооружены тагарцами. Первоначально археологи даже назвали эту культуру курганной. В тагарскую её переименовал С. В. Киселёв по названию острова и озера, где в конце ХIХ столетия проводились раскопки их древних поселений.

Тагарцы были скотоводами и земледельцами. Они изобрели систему оросительных каналов, изготовили наконечник мотыги из бронзы. В хозяйстве они впервые использовали вращающуюся зернотёрку, которая ускоряла процесс переработки зерна.

Эпоха, в которую развивается тагарская культура, обычно называется ранним железным веком. Но парадокс в том, что в курганах этого времени железных изделий практически нет, в числе находок — бронзовые предметы. Железо у тагарцев появляется на последних этапах существования их культуры, а литьё из бронзы было развито настолько, что полностью удовлетворяло потребности человека того времени.

Из-за того, что тагарцы стали передвигаться на лошадях, их контакты с соседями значительно увеличились. Все степи Евразии в это время стали единым культурным пространством. Некоторые вещи, найденные в тагарских курганах на берегах Енисея и Абакана, аналогичны предметам из курганов знаменитых скифов Причерноморья. В степных просторах Евразии можно встретить такие же, как у тагарцев, бронзовые удила, кинжалы, стрелы. Особенно выделяет эту культуру искусство бронзового литья в скифо-сибирском зверином стиле.

Этот стиль отразился и в наскальном искусстве. В Хакасии рисунков, относящихся к тагарской культуре, значительно больше петроглифов других эпох. На скалах изображались не только животные, но люди. Наиболее распространённый персонаж — это человек с ярко выраженными мужскими признаками. Помимо статичных фигур, часто встречаются батальные сцены и сюжеты из мирной жизни.
</string>
    <string name="lichina3_1block">Древние каменные изваяния сохранили мифологию и мировоззрение народов, которые жили в Хакасии более четырёх тысяч лет назад. Древние люди верили, что мир разделён на верхний, срединный и нижний — небесный, земной и подземный. Поэтому мастера делили на три части личины фантастических божеств.

В верхнем мире, по поверьям хакасов, жили духи, боги-творцы, которые видели прошлое, настоящее и будущее, поэтому у личину изображали с тремя глазами.

В центральном поясе личины изображалось очертание ноздрей, потому что средний мир предназначался для всего, что дышит — человека, животных, растений.

В нижнем мире обитали души людей после смерти. А ещё тёмные, злые божества. Рот личины символизировал переход в духовный мир, подземное царство.

Плиту нашли в Аскизском районе Хакасии. Она была частью ограды тагарского кургана.
</string>
    <string name="boyarskaya_1block">Писаница выбита на скалах Боярского хребта, который тянется вдоль левого берега Енисея. Художники выбрали холстом эти скалы, чтобы быть хорошо заметными издали. Выбивая изображения на камне, древние люди сохранили в веках рассказ о культуре и быте своего племени. Поэтому писаницы ценятся как важный исторический источник.
Сюжет Боярской писаницы связан с хозяйственной деятельностью древних обитателей бассейна Среднего Енисея. Для них скотоводство было основой благосостояния. Поэтому древние художники изобразили корову, яка, лошадь, северных оленей, овец, коз и собаку-лайку.
Кроме животных на писанице изображены жилища двух типов: срубные дома и каркасные юрты. Тагарцы вели сезонный быт и жили то в одних, то в других жилищах. Летом они пасли скот по прохладным речным долинам. А на зиму сгоняли стада на открытые пространства, где ветер сдувал снег, обнажая траву.
На закате и на рассвете рисунки на скалах будто оживают под косыми лучами солнца. Снизу оленье стадо гонят три всадника на лошадях и один на северном олене. В центре большие юрты и рубленые избы с покатыми крышами. Около жилищ котлы и животные:  козлы с длинными загнутыми назад рогами и бараны с куцыми хвостиками и мощными крутыми рогами. Фигуры животных динамичны, они будто скачут слева направо.
Вверху полотна человек в остроконечном головном уборе с луком и посохом. У его ног собака. Около домов люди в молитвенной позе с обращёнными к небу руками. Люди изображены условно, лаконично, почти превращены в схему.
Исследователи считают, что здесь изображен идеальный посёлок. Мастер верил, что рисунки обеспечат материальное благополучие и процветание реального поселения.
</string>
    <string name="olenii_1block">Эти украшения — образцы бронзового литья скифо-сибирского звериного стиля. Основные персонажи этого искусства — дикие и домашние животные. Предметы, украшенные звериными образами, можно считать амулетами. Они могли усиливать боевые качества оружия и коня, придавать воинам звериную силу, смелость, ловкость. Поэтому нашивная бляха с оленем имела сакральный смысл. И, в целом, была символом высокого социального статуса. Такие бляхи могли носить на поясе, нашивать на одежду, украшать ими упряжь коня.
На этих сохранившихся бляхах изображён рельеф оленя с поджатыми к брюху ногами, вытянутой шеей и ветвистыми рогами.
Вид «летящего» в галопе зверя настолько впечатлял древних охотников, что они использовали этот канонический образ столетиями. Картина напряжённая и динамичная: поджатые к животу ноги, запрокинутая назад голова, прижатые уши. Скифские мастера создали оленю раскидистые ветвистые рога. Они были своего рода оружием, при помощи них олень мог противостоять хищникам. Древние люди восхищались стремительностью и ловкостью оленей.
</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>